ad background gap resolved

--- a/css/hhss.css
+++ b/css/hhss.css
@@ -143,7 +143,16 @@ img.hulalogo {
 }
 
 /*============ADS===============*/
+.adbox {
+    background-color: ivory;
+    width: 100vw;
+    position: relative;
+    margin-left: -5vw;
+    margin-top: -100px;
+}
+
 #ads {
+    background-color: ivory;
     margin: 100px 5vw;
 }
 
